--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,6 +1,6 @@
 <nav>
-  <a routerLink="">Room 1</a>
-  <a routerLink="">Room 2</a>
-  <a routerLink="">Room 3</a>
-  <a routerLink="">Room 4</a>
+  <a routerLink="/room/1">Room 1</a>
+  <a routerLink="/room/2">Room 2</a>
+  <a routerLink="/room/3">Room 3</a>
+  <a routerLink="/room/4">Room 4</a>
 </nav>
