Add backlink to RoomsComponent.

--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -1,4 +1,4 @@
-<p class="backLink" (click)="goBack()">← go bak</p>
+<p class="backLink" (click)="goBack()">← go back to rooms</p>
 
 <h3>Room {{id}}</h3>
 
