--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,3 +1,5 @@
+<p class="backLink" (click)="goBack()">← go back to bookable items</p>
+
 <nav>
   <a *ngFor="let room of rooms" routerLink="/room/{{room.id}}">
     Room {{room.id}}
