--- a/src/app/room-current-bookings/room-current-bookings.component.html
+++ b/src/app/room-current-bookings/room-current-bookings.component.html
@@ -1,8 +1,8 @@
 <h3>Current bookings:</h3>
 <ul>
   <li *ngFor="let b of roomCurrentBookings">
-    <p>Person: {{b.person}}</p>
-    <p>Start: {{b.start}}</p>
-    <p>End: {{b.end}}</p>
+    <p>Person: {{ b.person }}</p>
+    <p>Start: {{ b.start | date:'medium' }}</p>
+    <p>End: {{ b.end | date:'medium' }}</p>
   </li>
 </ul>
