Mock assessment of booking through AssessRoomBookingService.

--- a/src/app/select-time-frame/select-time-frame.component.css
+++ b/src/app/select-time-frame/select-time-frame.component.css
@@ -1,3 +1,11 @@
 .available {
   background-color: greenyellow;
 }
+
+.accepted {
+  background-color: greenyellow;
+}
+
+.rejected {
+  background-color: red;
+}
