--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -2,7 +2,7 @@
 
 <h3>Room {{id}}</h3>
 
-<app-select-time-frame></app-select-time-frame>
+<app-select-time-frame [roomId]="id?.toString()"></app-select-time-frame>
 
 <br>
 
