Don't show `No one has booked this room yet!` when waiting for data.
When waiting for data from (mock) server, don't show `No one has
booked this room yet!`. Show loading message instead.

--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -6,10 +6,15 @@
 
 <br>
 
-<div *ngIf="room">
-  <app-room-current-bookings [roomCurrentBookings]="room.bookings"></app-room-current-bookings>
+<div *ngIf="room && room.bookings.length">
+  <app-room-current-bookings [roomCurrentBookings]="room ? room.bookings : []"></app-room-current-bookings>
 </div>
-<div *ngIf="!room">
+
+<div *ngIf="room && room.bookings.length===0">
   <br>
   No one has booked this room yet!
+</div>
+
+<div *ngIf="!room">
+  loading...
 </div>
