--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,5 +1,9 @@
 <p class="backLink" (click)="goBack()">← go back to bookable items</p>
 
+<div *ngIf="!roomsKeys.length">
+  loading...
+</div>
+
 <nav>
   <a *ngFor="let n of roomsKeys" routerLink="/rooms/{{n}}">
     Room {{n}}
