Add store starting point.
Now we are not using a so-called store. Components are managing their
own states. I'm following Toddo Motto's instruction on how to build an
``observable store''. Here is the starting point to build on top of.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,14 @@
 
  
 <router-outlet></router-outlet>
+
+<br>
+<br>
+<br>
+<br>
+<div>
+  <span>Store test:</span>
+  <div *ngFor="let todo of todos$ | async">
+    {{ todo.name }}
+  </div>
+</div>
