Pass room$ to RoomCurrentBookingsComponent from parent.

--- a/src/app/room-current-bookings/room-current-bookings.component.html
+++ b/src/app/room-current-bookings/room-current-bookings.component.html
@@ -11,3 +11,13 @@
 <div *ngIf="roomCurrentBookings==='loading'">
   loading...
 </div>
+
+<br>
+<br>
+<br>
+<div>
+  Store test 4:
+  <div *ngFor="let r of rooms$ | async">
+    {{ r.id }}, {{ r.bookings.length }}
+  </div>
+</div>
