Update store when booking a room.
This is still just an example of how to update the store. In the final
version of the application we will update the store only after a
successful http request to the server to update the data.

--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -18,4 +18,5 @@
   <div *ngFor="let r of rooms$ | async">
     Room {{ r.id }} has {{ r.bookings.length }} bookings
   </div>
+  <button (click)="logStore()">log store</button>
 </div>
