--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -2,7 +2,8 @@
 
 <h3>Room {{id}}</h3>
 
-<app-select-time-frame [rooms$]="rooms$" [roomId]="id?.toString()" [room]="room" (newBookingEvent)="handleNewBookingEvent()"></app-select-time-frame>
+<app-select-time-frame [rooms$]="rooms$" [roomId]="id?.toString()" [room]="room"
+                      (newBookingEvent)="handleNewBookingEvent()" (newBookingEvent2)="handleNewBookingEvent2($event)"></app-select-time-frame>
 
 <br>
 
