Make current bookings component display rooms data gotten from store.

--- a/src/app/room-current-bookings/room-current-bookings.component.html
+++ b/src/app/room-current-bookings/room-current-bookings.component.html
@@ -8,6 +8,15 @@
   </li>
 </ul>
 
+<h3>Current bookings reading from store:</h3>
+<ul *ngIf="roomCurrentBookings2">
+  <li *ngFor="let booking of roomCurrentBookings2">
+    <p>Person: {{ booking.person.name }} {{ booking.person.surname }} ({{ booking.person.role }})</p>
+    <p>Start: {{ booking.timeFrame.start | date:'medium' }}</p>
+    <p>End: {{ booking.timeFrame.end | date:'medium' }}</p>
+  </li>
+</ul>
+
 <div *ngIf="roomCurrentBookings==='loading'">
   loading...
 </div>
