--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -2,13 +2,16 @@
 
 <h3>Room {{id}}</h3>
 
-<app-select-time-frame [rooms$]="rooms$" [roomId]="id?.toString()" [room]="room"
+<app-select-time-frame [rooms$]="rooms$" [roomId]="id.toString()" [room]="room"
                       (newBookingEvent)="handleNewBookingEvent()" (newBookingEvent2)="handleNewBookingEvent2($event)"></app-select-time-frame>
 
 <br>
 
 <div *ngIf="room && room.bookings.length">
-  <app-room-current-bookings [rooms$]="rooms$" [roomCurrentBookings]="room ? room.bookings : 'loading'"></app-room-current-bookings>
+  <app-room-current-bookings [rooms$]="rooms$"
+                             [id]="id"
+                             [rooms2]="rooms$ | async"
+                             [roomCurrentBookings]="room ? room.bookings : 'loading'"></app-room-current-bookings>
 </div>
 
 <div *ngIf="room && room.bookings.length===0">
