--- a/src/app/select-time-frame/select-time-frame.component.html
+++ b/src/app/select-time-frame/select-time-frame.component.html
@@ -17,32 +17,29 @@
   -->
 
   <div>
-    <button (click)="handleInput()" (click)="handleInput2($event)">Send Request</button>
+    <button (click)="handleInput2($event)">Send Request</button>
   </div>  
 
-  <br>
+  <!-- <br>
     <div *ngIf="bookingAssessment?.result === true">
     <span class="accepted">Your booking looks okay!</span> {{bookingAssessment?.msg}}    
   </div>
   
   <div *ngIf="bookingAssessment?.result === false">
     <span class="rejected">Something is wrong with your booking...</span> {{bookingAssessment?.msg}}
-  </div>
+  </div> -->
 
 </div>
 
 
-<div>
+<!-- <div>
   Store test 3:
   <div *ngFor="let r of rooms$ | async">
     room id: {{ r.id }}, bookings num: {{ r.bookings.length }}
   </div>
-  Store test 3b:
-  <div *ngFor="let r of rooms2">
-    room id: {{ r.id }}, bookings num: {{ r.bookings.length }}
-  </div>
+
   Store test 3c:
   <div *ngFor="let r of rooms">
     room id: {{ r.id }}, bookings num: {{ r.bookings.length }}
   </div>
-</div>
+</div> -->
