--- a/src/app/room-current-bookings/room-current-bookings.component.html
+++ b/src/app/room-current-bookings/room-current-bookings.component.html
@@ -1,6 +1,6 @@
 <h3>Current bookings reading from store:</h3>
-<ul *ngIf="roomCurrentBookings2">
-  <li *ngFor="let booking of roomCurrentBookings2">
+<ul *ngIf="roomCurrentBookings">
+  <li *ngFor="let booking of roomCurrentBookings">
     <p>Person: {{ booking.person.name }} {{ booking.person.surname }} ({{ booking.person.role }})</p>
     <p>Start: {{ booking.timeFrame.start | date:'medium' }}</p>
     <p>End: {{ booking.timeFrame.end | date:'medium' }}</p>
