--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -7,11 +7,4 @@
 
 <br>
 
-<app-room-current-bookings [roomId]="id"></app-room-current-bookings>
-
-<!--
-<div *ngIf="room && room.bookings.length===0">
-  <br>
-  No one has booked this room yet!
-</div>
- -->
+<app-room-current-bookings [roomId]="id" [rooms$]="rooms$"></app-room-current-bookings>
