--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -7,4 +7,4 @@
 
 <br>
 
-<app-room-current-bookings [roomId]="id" [rooms$]="rooms$"></app-room-current-bookings>
+<app-room-current-bookings [room$]="room$"></app-room-current-bookings>
