--- a/src/app/select-time-frame/select-time-frame.component.html
+++ b/src/app/select-time-frame/select-time-frame.component.html
@@ -12,7 +12,7 @@
 <div *ngIf="selectedDate && selectedTimeStart && selectedTimeEnd">
 
   <div>
-    <button (click)="handleInput2($event)">Send Request</button>
+    <button (click)="handleInput3()">Send Request</button>
   </div>  
 
 </div>
