--- a/src/app/select-time-frame/select-time-frame.component.html
+++ b/src/app/select-time-frame/select-time-frame.component.html
@@ -1,17 +1,6 @@
 <div>
   <span>Select a time frame:</span>
   <div>
-    <input [(ngModel)]="selectedDate" type="date" name="selected-day">
-    <input [(ngModel)]="selectedTimeStart" type="time" name="selected-time-start">
-    <input [(ngModel)]="selectedTimeEnd" type="time" name="selected-time-end">
-    <input [formControl]="gpFormControl" type="text" name="foo" id="foobar">
-  </div>
-
-  <br>
-  <br>
-
-  <span>Select a time frame (using control):</span>
-  <div>
     <input [formControl]="selectedDateControl" type="date" name="selected-day">
     <input [formControl]="selectedTimeStartControl" type="time" name="selected-time-start">
     <input [formControl]="selectedTimeEndControl" type="time" name="selected-time-end">
@@ -20,10 +9,12 @@
 
 <br>
 
-<div *ngIf="selectedDate && selectedTimeStart && selectedTimeEnd">
-
+<div *ngIf="selectedDateControl.value
+                          &&
+            selectedTimeStartControl.value
+                          &&
+            selectedTimeEndControl.value">
   <div>
     <button (click)="handleInput()">Send Request</button>
   </div>  
-
 </div>
