Make selectTimeFrameComponent stateless.
Make selectTimeFrameComponent stateless. Now it only emits an event
with the non-processed input from the user. That input is handled by
the parent component (roomDetailComponent).

--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -2,8 +2,7 @@
 
 <h3>Room {{id}}</h3>
 
-<app-select-time-frame [room$]="room$"
-                       (newBookingEvent)="handleNewBookingEvent($event)"></app-select-time-frame>
+<app-select-time-frame (newBookingEvent)="handleNewBookingEvent($event)"></app-select-time-frame>
 
 <br>
 
