Replace buttons with Angular Material cards in rooms component.

--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,7 +1,5 @@
 <p class="backLink" (click)="goBack()">← go back to bookable items</p>
 
-<nav>
-  <a *ngFor="let n of roomsKeys" routerLink="/rooms/{{n}}">
-    Room {{n}}
-  </a>
-</nav>
+<mat-card *ngFor="let n of roomsKeys" routerLink="/rooms/{{n}}">
+  <a>Room {{ n }}</a>
+</mat-card>
