--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,5 +1,16 @@
 <p class="backLink" (click)="goBack()">← go back to bookable items</p>
 
-<mat-card *ngFor="let n of roomsKeys" routerLink="/rooms/{{n}}">
-  <a>Room {{ n }}</a>
+<mat-card *ngFor="let r of rooms" routerLink="/rooms/{{r.id}}">
+  <mat-card-title>Room {{ r.id }}</mat-card-title>
+  <mat-card-subtitle>
+
+    <span>CAP: {{ r.capacity }}</span>
+    <span *ngIf="r.airConditioning"> | AC</span>
+    <span *ngIf="r.display"> | DISPLAY</span>
+    <span *ngIf="r.whiteboard"> | WHITEBOARD</span>
+
+  </mat-card-subtitle>
+  <mat-card-actions>
+    <button>CHECK</button>
+  </mat-card-actions>
 </mat-card>
