--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import "../node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css";
+
 /* You can add global styles to this file, and also import other style files */
 .backLink {
   cursor:pointer;
