--- a/src/app/rooms/rooms.component.css
+++ b/src/app/rooms/rooms.component.css
@@ -2,8 +2,7 @@ mat-card {
   margin: 1em;
   width: 15%;
   min-width: 100px;
-  color: black;
-  background-color: #d7dbe0;
+
   text-align: center;
 }
 
@@ -11,13 +10,10 @@ mat-card {
   text-align: right;
 }
 
-mat-card-subtitle {
-  font-size: 10px;
-  color: grey;
-}
-
 mat-card:hover {
   color: white;
+
   background-color: #42545C;
-  /*cursor: pointer;*/
+
+  cursor: pointer;
 }
