--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-@import "../node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css";
-
 /* You can add global styles to this file, and also import other style files */
 .backLink {
   cursor:pointer;
@@ -29,5 +27,12 @@ Use of this source code is governed by an MIT-style license that
 can be found in the LICENSE file at https://angular.io/license
 */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto,
+  "Helvetica Neue", sans-serif;
+}
