Sketch typeahead filtering methods.

--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -5,11 +5,14 @@
 <br>
 <br>
 
-<app-room-filter></app-room-filter>
+<app-room-filter (nameFilterEvent3)="handleNameFilterEvent3()"
+                 (nameFilterEvent2)="handleNameFilterEvent2($event)"
+                 (nameFilterEvent)="handleNameFilterEvent($event)"></app-room-filter>
 
 <br>
 
-<mat-card *ngFor="let r of rooms" routerLink="/rooms/{{r.id}}">
+<!-- <mat-card *ngFor="let r of filteredRooms2" routerLink="/rooms/{{r.id}}"> -->
+<mat-card *ngFor="let r of filteredRooms" routerLink="/rooms/{{r.id}}">
   <div class="matHeader">
     <mat-checkbox align="end"></mat-checkbox>
   </div>
