Implement 2nd way of filtering room cards.

--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -11,8 +11,8 @@
 
 <br>
 
-<!-- <mat-card *ngFor="let r of filteredRooms2" routerLink="/rooms/{{r.id}}"> -->
-<mat-card *ngFor="let r of filteredRooms" routerLink="/rooms/{{r.id}}">
+<mat-card *ngFor="let r of filteredRooms2" routerLink="/rooms/{{r.id}}">
+<!-- <mat-card *ngFor="let r of filteredRooms" routerLink="/rooms/{{r.id}}"> -->
   <div class="matHeader">
     <mat-checkbox align="end"></mat-checkbox>
   </div>
