--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -5,15 +5,11 @@
 <br>
 <br>
 
-<app-room-filter (nameFilterEvent3b)="handleNameFilterEvent3b($event)"></app-room-filter>
-<!-- <app-room-filter (nameFilterEvent2)="handleNameFilterEvent2($event)"></app-room-filter> -->
-<!-- <app-room-filter (nameFilterEvent)="handleNameFilterEvent($event)"></app-room-filter> -->
+<app-room-filter (nameFilterInitEvent)="handleNameFilterEvent3b($event)"></app-room-filter>
 
 <br>
 
-<mat-card *ngFor="let r of filteredRooms3" routerLink="/rooms/{{r.id}}">
-<!-- <mat-card *ngFor="let r of filteredRooms2" routerLink="/rooms/{{r.id}}"> -->
-<!-- <mat-card *ngFor="let r of filteredRooms" routerLink="/rooms/{{r.id}}"> -->
+<mat-card *ngFor="let r of filteredRooms" routerLink="/rooms/{{r.id}}">
   <div class="matHeader">
     <mat-checkbox align="end"></mat-checkbox>
   </div>
