--- a/src/app/room-filter/room-filter.component.html
+++ b/src/app/room-filter/room-filter.component.html
@@ -6,7 +6,7 @@
   <!-- filter by name -->
   <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>Filter by room name</mat-label>
-      <input [formControl]="nameControl" #nameFilter matInput placeholder="Stevenson" (input)="handleInputEvent3($event)">
+      <input #nameFilter matInput placeholder="Stevenson" (input)="handleInputEvent3($event)">
   </mat-form-field>
 
   <!-- filter by timeframe -->
