Create and use ObservableFilter interface.
Create and use ObservableFilter interface. Also simplify a ridicolous
piece of code.

--- a/src/app/room-filter/room-filter.component.html
+++ b/src/app/room-filter/room-filter.component.html
@@ -20,7 +20,7 @@
   <!-- filter by ac -->
   <mat-checkbox class="roomFilterCheckBox" (input)="handleAcInput($event)">AC</mat-checkbox>
   <!-- filter by display -->
-  <mat-checkbox class="roomFilterCheckBox">Display</mat-checkbox>
+  <mat-checkbox class="roomFilterCheckBox" (input)="handleWbInput($event)">Display</mat-checkbox>
   <!-- filter by whiteboard -->
   <mat-checkbox class="roomFilterCheckBox">White Board</mat-checkbox>
   <!-- filter by capacity -->
