--- a/src/app/room-filter/room-filter.component.html
+++ b/src/app/room-filter/room-filter.component.html
@@ -19,10 +19,10 @@
 
   <!-- filter by ac -->
   <mat-checkbox class="roomFilterCheckBox" (input)="handleAcInput($event)">AC</mat-checkbox>
-  <!-- filter by display -->
-  <mat-checkbox class="roomFilterCheckBox" (input)="handleWbInput($event)">Display</mat-checkbox>
   <!-- filter by whiteboard -->
-  <mat-checkbox class="roomFilterCheckBox">White Board</mat-checkbox>
+  <mat-checkbox class="roomFilterCheckBox" (input)="handleWbInput($event)">White Board</mat-checkbox>
+  <!-- filter by display -->
+  <mat-checkbox class="roomFilterCheckBox">Display</mat-checkbox>
   <!-- filter by capacity -->
   <span>Capacity (todo)</span>
 
