Make display filter work.

--- a/src/app/room-filter/room-filter.component.html
+++ b/src/app/room-filter/room-filter.component.html
@@ -22,7 +22,7 @@
   <!-- filter by whiteboard -->
   <mat-checkbox class="roomFilterCheckBox" (input)="handleWbInput($event)">White Board</mat-checkbox>
   <!-- filter by display -->
-  <mat-checkbox class="roomFilterCheckBox">Display</mat-checkbox>
+  <mat-checkbox class="roomFilterCheckBox" (input)="handleDisplayInput($event)">Display</mat-checkbox>
   <!-- filter by capacity -->
   <span>Capacity (todo)</span>
 
