--- a/src/app/room-filter/room-filter.component.html
+++ b/src/app/room-filter/room-filter.component.html
@@ -10,10 +10,12 @@
   </mat-form-field>
 
   <!-- filter by timeframe -->
+  <label for="">date</label>
+  <input (change)="handleTimeFrameDateInput($event)" type="date">
   <label for="">from</label>
-  <input type="time">
+  <input (change)="handleTimeFrameFromInput($event)" type="time">
   <label for="">to</label>
-  <input type="time">
+  <input (change)="handleTimeFrameToInput($event)" type="time">
 
   <br>
 
