--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -5,7 +5,7 @@
 <br>
 <br>
 
-<app-room-filter (filterInitEvent)="handleFilterInit($event)"></app-room-filter>
+<app-room-filter></app-room-filter>
 
 <br>
 
