--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,6 +1,6 @@
 <p class="backLink" (click)="goBack()">← go back to bookable items</p>
 
-<button>create room (todo)</button>
+<button mat-stroked-button color="primary" (click)="handleCreateRoomClick()">Create room</button>
 
 <br>
 <br>
