--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,6 +1,7 @@
 <p class="backLink" (click)="goBack()">← go back to bookable items</p>
 
 <button mat-stroked-button color="primary" (click)="handleCreateRoomClick()">Create room</button>
+<button *ngIf="this.selected && this.selected.length > 1" mat-stroked-button color="primary">Multi-Action</button>
 
 <br>
 <br>
