Add modify room button in cards.

--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -24,7 +24,7 @@
     <span *ngIf="r.display"> | DISPLAY</span>
   </mat-card-subtitle>
   
-  <mat-card-actions>
-    <button>Button</button>
+  <mat-card-actions align="end">
+    <button mat-stroked-button color="primary" (click)="modifyRoom($event, r.id)">Modify room</button>
   </mat-card-actions>
 </mat-card>
