--- a/src/app/select-time-frame/select-time-frame.component.html
+++ b/src/app/select-time-frame/select-time-frame.component.html
@@ -1,5 +1,5 @@
-<div>
-  <span>Select a time frame:</span>
+<div id="timeFrame">
+  <span>Book a time frame:</span>
   <div>
     <input [formControl]="selectedDateControl" type="date" name="selected-day">
     <input [formControl]="selectedTimeStartControl" type="time" name="selected-time-start">
