--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -2,7 +2,7 @@
 
 <button mat-stroked-button color="primary" (click)="handleCreateRoomClick()">Create room</button>
 <button *ngIf="this.selected && this.selected.length > 1" mat-stroked-button color="primary">Multi-Action</button>
-<button *ngIf="this.selected && this.selected.length > 1 && filter && filter.date && filter.from && filter.to" mat-stroked-button color="primary" (click)="multipleBook()">Book Multiple Rooms</button>
+<button *ngIf="this.selected && this.selected.length > 1 && filter && filter.date && filter.from && filter.to" mat-stroked-button color="primary" (click)="multipleBook2()">Book Multiple Rooms</button>
 
 <br>
 <br>
