Move handling booking logic from room detail comp. to room service.

--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -11,7 +11,7 @@
 <br>
 <br>
 
-<app-select-time-frame (newBookingEvent)="handleNewBookingEvent($event)"></app-select-time-frame>
+<app-select-time-frame (newBookingEvent)="handleNewBookingEvent3($event)"></app-select-time-frame>
 
 <br>
 
